Descriptions Add on pe__policies_l_french.yml
Added Descriptions for all policies (and all choices). 
Huge Thanks to Kitsune for laying the groundwork.

Co-authored-by: Kitsune <marionchartier09@gmail.com>

(Squashed 2 commits)

--- a/localisation/pe__policies_l_english.yml
+++ b/localisation/pe__policies_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
-
+# TODO : Add Descriptions (port from French)
  policy_pe__population_regulation_policy:0 "Population Regulation"
  policy_pe__population_regulation_policy_desc:0 "(WIP Description)"
 
